apps/media/navidrome/ingressroute-subsonic.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: navidrome-subsonic
  namespace: navidrome
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`subsonic.rostor.cloud`)
      services:
        - name: navidrome
          port: 4533
  tls:
    secretName: navidrome-cloud-tls
