apps/media/navidrome/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: navidrome
  namespace: navidrome
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`music.rostor.cloud`) && PathPrefix(`/outpost.goauthentik.io`)
      services:
        - name: authentik-server
          namespace: authentik
          port: 80
    - kind: Rule
      match: Host(`music.rostor.cloud`)
      services:
        - name: navidrome
          port: 4533
      middlewares:
        - name: navidrome-auth
  tls:
    secretName: navidrome-cloud-tls
